--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <a class="nav-link" href="#" id="nav-user-profile"></a>
     <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
   </div>
+  <a href="#" id="nav-link-show-form">submit</a>
 </nav>
 
 <!-- area for stories (all stories, user stories, favorites) -->
@@ -54,6 +55,26 @@
   <ol id="all-stories-list" class="stories-list"></ol>
 
 </section>
+
+<!-- adding a new story -->
+<!-- author title url -->
+<h4>
+  <form action="#" id="story-form" class="account-form hidden">
+    <div class="login-input">
+      <label for="author">author</label>
+      <input id="story-author" type="text">
+    </div>
+    <div class="login-input">
+      <label for="title">title</label>
+      <input id="story-title" type="text">
+    </div>
+    <div class="login-input">
+      <label for="url">url</label>
+      <input id="story-url" type="text">
+    </div>
+    <input id="story-input-button" type="button" value="submit">
+  </form>
+</h4>
 
 <!-- Login and signup forms -->
 <section class="account-forms-container container">
@@ -91,6 +112,8 @@
     <button type="submit">create account</button>
   </form>
 </section>
+
+
 
 <!-- Library JS & our JS -->
 <script src="https://unpkg.com/jquery"></script>
